--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+  <span class="alert-container">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+  </span>
 
 <ul class="navbar">
-    <li><%= link_to 'home', root_path %></li>
   <% if user_signed_in? %>
+    <li><%= link_to 'home', root_path %></li>
     <li><%= link_to 'self', user_path(current_user) %></li>
     <li><%= link_to 'upload', new_photo_path %></li>
     <li><%= link_to 'sign out', destroy_user_session_url, :method => :delete %></li>
