--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,8 @@
-<h1><%= current_user.email %></h1>
+<h1><%= current_user.username %></h1>
 
 <div class="photo-container">
   <% @photos.each do |photo| %>
-    <%= image_tag image_photo_path(photo), class: 'medium-photo' %>
+    <%= image_tag image_photo_path(photo), class: 'user-photo' %>
   <% end %>
 </div>
 
