--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -7,6 +7,8 @@
 <div class="user-container">
 </div>
 
+<%= render 'upload_photo_modal' %>
 <!-- facebook/twitter
      queries
-     action mailer -->
+     action mailer
+     bootstrap -->
