got action mailer to work

--- a/app/views/photos/_upload_photo_modal.html.erb
+++ b/app/views/photos/_upload_photo_modal.html.erb
@@ -12,7 +12,7 @@
           <%= f.file_field :image %>
         </p>
         <div class="modal-footer">
-          <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+          <!-- <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button> -->
           <%= f.submit %>
         </div>
       <% end %>
