--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,4 +1,8 @@
-<h1>All photos</h1>
+<h1>
+  <a data-url="" href="https://twitter.com/share" class="twitter-share-button" data-lang="en" rel="canonical" >Tweet</a>
+  All photos
+  <span href="http://localhost:3000/" class="fb-like" data-send="false" data-width="450" data-show-faces="true" data-font="arial"></span>
+</h1>
 
 <div class="photo-container">
   <%= render @photos %>
@@ -6,9 +10,20 @@
 
 <div class="user-container">
 </div>
-
 <%= render 'upload_photo_modal' %>
+
 <!-- facebook/twitter
      queries
      action mailer
      bootstrap -->
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=492172844179398";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+  !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+</script>
