--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -2,4 +2,6 @@
 <%= image_tag image_photo_path(photo), {class: 'user-photo',
                                         data_time: time_ago_in_words(photo.created_at),
                                         data_user: photo.user.id,
-                                        data_user_email: photo.user.username} %>
+                                        data_user_email: photo.user.username,
+                                        data_liked: (current_user.liked_photos.include?(photo) ||
+                                                     current_user.photos.include?(photo)) } %>
