--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -2,6 +2,8 @@
 <%= image_tag image_photo_path(photo), {class: 'user-photo',
                                         data_time: time_ago_in_words(photo.created_at),
                                         data_user: photo.user.id,
-                                        data_user_email: photo.user.username,
+                                        data_username: photo.user.username,
                                         data_liked: (current_user.liked_photos.include?(photo) ||
-                                                     current_user.photos.include?(photo)) } %>
+                                                     current_user.photos.include?(photo)),
+                                        id: photo.id,
+                                        data_user_profile: photo.user.profile_picture.url(:small)} %>
