--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,10 +1,10 @@
-<h1>
-  <a data-url="" href="https://twitter.com/share" class="twitter-share-button" data-lang="en" rel="canonical" >Tweet</a>
-  All photos
-  <span href="http://localhost:3000/" class="fb-like" data-send="false" data-width="450" data-show-faces="true" data-font="arial"></span>
-</h1>
 
+<h1>
+  All photos
+</h1>
 <div class="photo-container">
+  <a data-url="" href="https://twitter.com/share" class="twitter-share-button" data-lang="en" rel="canonical" >Tweet</a>
+  <span href="http://localhost:3000/" class="fb-like" data-send="false" data-width="450" data-show-faces="true" data-font="arial"></span>
   <%= render @photos %>
 </div>
 
@@ -13,12 +13,12 @@
 
 
 <!-- facebook/twitter
-     queries
-     action mailer
-     bootstrap -->
+     bootstrap
+   -->
 
 <div id="fb-root"></div>
-<script>(function(d, s, id) {
+
+<script> (function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
     if (d.getElementById(id)) return;
     js = d.createElement(s); js.id = id;
