added photoapps like button. added twitter/facebook share for every photo. added delete button.

--- a/app/views/photos/_upload_photo_modal.html.erb
+++ b/app/views/photos/_upload_photo_modal.html.erb
@@ -8,8 +8,7 @@
     <div class="new-photo-page">
       <%= simple_form_for(Photo.new) do |f| %>
         <p>
-          <%= f.label :image %>
-          <%= f.file_field :image %>
+          <%= f.file_field :image_attached %>
         </p>
         <div class="modal-footer">
           <%= f.submit %>
