--- a/app/views/user_mailer/photo_post_inform.html.erb
+++ b/app/views/user_mailer/photo_post_inform.html.erb
@@ -11,6 +11,6 @@
     <p>
       To login to the site, just follow this link: <%= @url %>.
     </p>
-    <p>Don't forget to PhApp!</p>
+    <p>Don't forget to PhotoApp!</p>
   </body>
 </html>
