--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,12 +24,56 @@ body {
 }
 
 .shared-liked-photos {
-  color: #4FBF40;
+  color: #581D3E;
   font-size: 50px;
+  text-decoration: none;
   &:hover {
     cursor: pointer;
-    color: blue;
+    color: #CC7066;
+    text-decoration: none;
   }
+}
+
+.delete-photo {
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 5px;
+  background: red;
+  font-size: 8px;
+  border-radius: 8px;
+
+  &:hover{
+    background: purple;
+    color: white;
+    cursor: pointer;
+  }
+}
+
+.photoapps-like {
+  text-align: center;
+  float: left;
+  width: 55px;
+  margin-left: 100px;
+  background: purple;
+  color: white;
+  border-radius: 5px;
+  margin-top: 5px;
+  &:hover{
+    cursor: default;
+  }
+}
+
+.twitter-share-button {
+  margin-left: 15px;
+}
+
+#widget {
+  width: 30px;
+}
+
+.fb-like {
+  width: 100px;
 }
 
 .photo-container {
@@ -38,33 +82,42 @@ body {
 
 .all-photos {
   font-size: 50px;
-  color: #4FBF40;
+  color: #581D3E;
+  text-decoration: none;
   &:hover {
     cursor: pointer;
-    color: blue;
+    color: #CC7066;
+    text-decoration: none;
   }
 }
 
 .like-button {
   margin-left: 300px;
+  margin-top: 40px;
+  background: purple;
+  border-radius: 25px;
+  width: 60px;
+  color: white;
   font-size: 60px;
+  &:hover{
+    text-decoration: none;
+    color: #581D3E;
+    background: #CC7066;
+  }
 }
 
 .login-page {
   background: white;
   margin-top: 5%;
   width: 400px;
-}
-
-.alert-container {
-  color: white;
+  margin-left: 10%;
 }
 
 .user-photo {
   width: 70%;
   padding: 30px;
   margin-top: 40px;
-  margin: 50px;
+  margin: 20px;
   margin-left: 63px;
   background: #E3D9F2;
   border: solid black 2px;
@@ -100,9 +153,8 @@ body {
 .user-container {
   width: 690px;
   height: 700px;
-  margin: 0;
-  padding: 0;
-  float: left;
+  // margin: 0;
+  // padding: 0;
   margin-left: 47%;
   position: fixed;
   background: #183949;
@@ -158,9 +210,10 @@ body {
 .photo-info {
   color: white;
   margin-left: 210px;
+  margin-bottom: 30px;
 }
 
 h1 {
   margin-left: 270px;
-  color: #4FBF40;
+  color: #CC7066;
 }
