--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,9 +1,19 @@
+<span class="photo-holder-<%= photo.id %>">
+  <%= image_tag photo.image_attached.url(:big), {class: 'user-photo',
+                                          data_time: time_ago_in_words(photo.created_at),
+                                          data_user: photo.user.id,
+                                          data_username: photo.user.username,
+                                          data_liked: (current_user.liked_photos.include?(photo) ||
+                                                       current_user.photos.include?(photo)),
+                                          id: photo.id,
+                                          data_user_profile: photo.user.profile_picture.url(:small)} %>
 
-<%= image_tag image_photo_path(photo), {class: 'user-photo',
-                                        data_time: time_ago_in_words(photo.created_at),
-                                        data_user: photo.user.id,
-                                        data_username: photo.user.username,
-                                        data_liked: (current_user.liked_photos.include?(photo) ||
-                                                     current_user.photos.include?(photo)),
-                                        id: photo.id,
-                                        data_user_profile: photo.user.profile_picture.url(:small)} %>
+  <div class="photoapps-like"><%= photo.likes.size %> likes</div>
+
+  <!-- facebook and twitter shares -->
+  <a data-url="<%= photo.image_attached.url %>" href="https://twitter.com/share" class="twitter-share-button" data-lang="en" rel="canonical" >Tweet</a>
+  <span href="<%= photo.image_attached.url %>" class="fb-like" data-send="false" data-width="450" data-show-faces="true" data-font="arial"></span>
+  <% if current_user == photo.user %>
+    <div class="delete-photo" data-photo-id="<%= photo.id %>">delete</div>
+  <% end %>
+</span>
