--- a/app/views/user_mailer/photo_post_inform.html.erb
+++ b/app/views/user_mailer/photo_post_inform.html.erb
@@ -6,11 +6,11 @@
   <body>
     <h1>very nice photo upload, <%= @user.username %></h1>
     <p>
-      Your photo post is a very respectable example of comedy.<br/>
+      Your photo is very respectable.<br/>
     </p>
     <p>
       To login to the site, just follow this link: <%= @url %>.
     </p>
-    <p>Don't forget to PhotoApp!</p>
+    <p>Have a blast on PhotoApp!</p>
   </body>
 </html>
