--- a/app/views/user_mailer/photo_post_inform.text.erb
+++ b/app/views/user_mailer/photo_post_inform.text.erb
@@ -1,4 +1,4 @@
-sick photo post, bro
+good post!
 ===============================================
 
 your photo has successfully been uploaded onto photoapp.com
